# homepage

./: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  input.css  nginx.conf  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: main.yaml
src/: lib.rs  main.rs
src/background/: component.rs  particles_config.json
src/footer/: component.rs
src/navbar/: component.rs
