[package]
name = "homepage"
version = "1.0.0"
authors = ["Harry Agustian"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5", features = ["web", "router"] }
wasm-bindgen = "0.2.92"
web-sys = "0.3.69"
wasm-bindgen-futures = "0.4.42"

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
dioxus-free-icons = { version = "0.8.6", features = ["bootstrap"] }

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
